--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "ember-cli-babel": "^7.7.3",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
+    "ember-cli-fastboot": "^2.1.0",
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
@@ -37,13 +39,18 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^7.8.1",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-responsive-image": "^1.0.0-rc.6",
     "ember-source": "~3.10.0",
     "ember-welcome-page": "^4.0.0",
+    "empress-blog": "^1.7.1",
+    "empress-blog-casper-template": "^3.1.0",
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
+    "prember": "^1.0.3",
     "qunit-dom": "^0.8.4"
   },
   "engines": {
