update deploy to only happen on push to site branch

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,8 @@
-on: push
 name: Deploy
+on:
+  push:	
+    branches:	
+      - site
 jobs:
   deployToGitHubPages:
     name: Deploy to GitHub Pages
