--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-responsive-image": "^1.0.0-rc.6",
+    "ember-showdown-prism": "^1.0.0",
     "ember-source": "~3.10.0",
     "empress-blog": "^1.8.0-0",
     "empress-blog-casper-template": "^3.1.0",
