--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.3",
+    "ember-auto-import": "^2.2.3",
     "ember-cli": "~3.28.2",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.6",
@@ -76,5 +76,8 @@
   "volta": {
     "node": "14.18.1",
     "yarn": "1.22.17"
+  },
+  "dependencies": {
+    "webpack": "^5.58.2"
   }
 }
